# edge-agent

./: .dockerignore  .env.example  .gitignore  .npmignore  ANALYSIS_INDEX.md  BUGS_FIXED_SUMMARY.txt  CHANGELOG.md  CODE_LOCATIONS.md  CONTRIBUTING.md  COORDINATOR_REPORT.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  DEVELOPMENT.md  Dockerfile  INTEGRATION_DELIVERABLES.md  INTEGRATION_SUMMARY.md  LAYER3_SUMMARY.txt  MIGRATION_VALIDATION_REPORT.md  OPENTELEMETRY_ALIGNMENT_FINAL_REPORT.md  OTEL_MIGRATION_VISUAL_GUIDE.md  OTEL_UPGRADE_INDEX.md  OTEL_UPGRADE_QUICK_START.md  PHASE_2B_COMPLETION_REPORT.md  PHASE_2B_INTEGRATION_REPORT.md  PHASE_2B_READINESS_ASSESSMENT.md  POLICY_ENGINE_UPGRADE_SPECIFICATION.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.txt  PROVIDER_LAYER_README.md  QUICKSTART.md  QUICKSTART_LAYER1.md  README.md  README_FINAL.md  TELEMETRY_ALIGNMENT_COORDINATION_REPORT.md  TELEMETRY_INVENTORY.csv  TELEMETRY_METADATA_INVENTORY.md  TELEMETRY_QUICK_REFERENCE.md  TELEMETRY_SCAN_INDEX.md  TELEMETRY_SCAN_SUMMARY.txt  UPSTREAM_REFERENCE.md  (+8 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: README.md  ci.yml  comprehensive-tests.yml  integration-tests.yml  npm-publish.yml  publish-crates.yml  release.yml
benches/: cache_benchmarks.rs  routing_benchmarks.rs
benchmarks/: INTEGRATION.md  README.md
benchmarks/output/: summary.md
config/: config.yaml  development.yaml  production.yaml
crates/llm-edge-agent/: Cargo.toml  README.md
crates/llm-edge-agent/src/: integration.rs  lib.rs  main.rs  proxy.rs
crates/llm-edge-cache/: Cargo.toml  README.md
crates/llm-edge-cache/src/: error.rs  key.rs  l1.rs  l2.rs  lib.rs  metrics.rs  types.rs
crates/llm-edge-integrations/: Cargo.toml
crates/llm-edge-integrations/src/: connector_hub.rs  cost_ops.rs  lib.rs  observatory.rs  policy_engine.rs  sentinel.rs  shield.rs
crates/llm-edge-monitoring/: Cargo.toml  README.md
crates/llm-edge-monitoring/src/: error.rs  lib.rs  metrics.rs  tracing.rs
crates/llm-edge-providers/: Cargo.toml  README.md
crates/llm-edge-providers/src/: adapter.rs  anthropic.rs  error.rs  lib.rs  openai.rs  types.rs
crates/llm-edge-proxy/: Cargo.toml  README.md
crates/llm-edge-proxy/src/: error.rs  lib.rs  middleware.rs  server.rs
crates/llm-edge-proxy/src/config/: mod.rs
crates/llm-edge-proxy/src/middleware/: auth.rs  rate_limit.rs  timeout.rs
crates/llm-edge-proxy/src/server/: routes.rs  tls.rs  tracing.rs
crates/llm-edge-routing/: Cargo.toml  README.md
crates/llm-edge-routing/src/: circuit_breaker.rs  error.rs  lib.rs  strategy.rs
crates/llm-edge-security/: Cargo.toml  README.md
crates/llm-edge-security/src/: auth.rs  error.rs  lib.rs  pii.rs  validation.rs
deploy/: .env.example  README.md  otel-collector-config.yaml  prometheus.yml  validate-deployment.sh
deploy/grafana/provisioning/datasources/: datasources.yml
deployments/kubernetes/: grafana.yaml  jaeger.yaml  llm-edge-agent.yaml  namespace.yaml  prometheus.yaml  redis-cluster.yaml
deployments/service-mesh/istio/: envoy-filter.yaml
deployments/sidecar/kubernetes/: deployment.yaml
deployments/standalone/: prometheus.yml
deployments/standalone/config/: production.yaml
deployments/standalone/docker/: Dockerfile  docker-compose.yaml
docs/: ARCHITECTURE.md  BACKEND_IMPLEMENTATION_REPORT.md  BENCHMARK_INTEGRATION_REPORT.md  BUG_FIX_REPORT.md  COORDINATION_STATUS.md  DELIVERABLES_SUMMARY.md  DEPLOYMENT_AND_ROADMAP.md  DEVOPS_ROADMAP_README.md  DOCUMENTATION_INDEX.md  FINAL_IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_IMPLEMENTATION_COMPLETE.md  INFRASTRUCTURE_VALIDATION_COMPLETE.md  INTEGRATION.md  INTEGRATION_DIAGRAM.md  INTEGRATION_QUICKSTART.md  INTEGRATION_REPORT.md  INTEGRATION_TEST_DELIVERABLES.md  INTEGRATION_TEST_REPORT.md  INTEGRATION_TEST_SUMMARY.txt  LAYER1_IMPLEMENTATION_REPORT.md  LAYER3_IMPLEMENTATION_REPORT.md  NPM_PUBLISHING.md  NPM_QUICK_PUBLISH.md  NPM_READINESS_SUMMARY.md  PERFORMANCE_TESTING.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PUBLISHING.md  PUBLISH_NOW.md  QUICKSTART.md  QUICK_START_BACKEND.md  README_LAYER1.md  RUST_TECHNICAL_RECOMMENDATIONS.md  SWARM_COORDINATION_REPORT.md  SWARM_IMPLEMENTATION_FINAL_REPORT.md  TECHNICAL_PLAN.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_COMPLETE.md  TRACING_ANALYSIS_SUMMARY.md  TRACING_IMPLEMENTATION_GUIDE.md  TRACING_MIGRATION_CHECKLIST.md  (+3 more)
docs/policy-engine-upgrade/: Cargo.toml.reference  main.rs.reference
examples/: basic_usage.rs  run_benchmarks.rs
infrastructure/grafana/dashboards/: dashboards.yml
infrastructure/grafana/datasources/: prometheus.yml
infrastructure/prometheus/: alerts.yml  prometheus.yml
npm-packages/linux-x64/: README.md  package.json
plans/: LLM_EDGE_AGENT_CONSOLIDATED_PLAN.md
scripts/: install.js  package.js  prepack.js  publish-platforms.js  run-tests.sh  verify-production-ready.sh
src/: lib.rs  main.rs
src/adapters/: l1_cache.rs  mod.rs  routing.rs
src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
src/cache/: key.rs  l1.rs  l2.rs  metrics.rs  mod.rs
src/error/: mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  timeout.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/providers/: anthropic.rs  mod.rs  openai.rs  pricing.rs  tests.rs  types.rs
src/routing/: circuit_breaker.rs  mod.rs  strategies.rs
src/server/: mod.rs  routes.rs  tls.rs
tests/: README.md  cache_tests.rs  integration_tests.rs
tests/chaos/: chaos-engineering.sh
tests/helpers/: config.rs  fixtures.rs  metrics.rs  mod.rs  server.rs
tests/load/: baseline-load-test.js  cache-effectiveness-test.js  soak-test.js  spike-test.js  stress-test.js
tests/mocks/: cache.rs  mod.rs  provider.rs  router.rs
tests/performance/: flamegraph.sh  profiling-config.toml  regression-test.sh
tests/security/: dependency-scan.sh  owasp-zap-scan.sh  penetration-test.sh
