[workspace]
members = [
    "crates/llm-edge-agent",
    "crates/llm-edge-proxy",
    "crates/llm-edge-cache",
    "crates/llm-edge-routing",
    "crates/llm-edge-providers",
    "crates/llm-edge-security",
    "crates/llm-edge-monitoring",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LLM Edge Agent Team"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/llm-edge-agent"
rust-version = "1.75"

[workspace.dependencies]
# Web Framework & Runtime
axum = { version = "0.8", features = ["macros", "ws", "http2"] }
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "compression-full", "cors", "limit"] }

# Async Runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "gzip", "brotli", "http2"], default-features = false }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# Caching
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "cluster-async"] }

# Resilience & Rate Limiting
tower_governor = "0.4"
failsafe = "1.3"

# Observability
opentelemetry = "0.26"
opentelemetry-otlp = { version = "0.26", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Security
rustls = "0.23"
secrecy = "0.8"
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["toml", "env", "json"] }

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
