[package]
name = "llm-edge-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Observability and monitoring for LLM Edge Agent"

[dependencies]
# Observability - Metrics
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

# Observability - Tracing
tracing.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true

# Async Runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
