[package]
name = "llm-edge-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LLM provider adapters for OpenAI, Anthropic, Google, AWS, Azure"
keywords = ["llm", "openai", "anthropic", "api", "adapter"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
# HTTP Client
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true

# Async Runtime
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Security
secrecy.workspace = true

# Observability
tracing.workspace = true
opentelemetry.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
