[package]
name = "llm-edge-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core HTTP proxy functionality for LLM Edge Agent"
keywords = ["http", "proxy", "llm", "middleware", "gateway"]
categories = ["web-programming::http-server", "network-programming", "asynchronous"]

[dependencies]
# Web Framework
axum.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
futures.workspace = true

# Rate Limiting
tower_governor.workspace = true

# Security & TLS
rustls.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Additional dependencies for proxy functionality
sha2 = "0.10"
hex = "0.4"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"

[dev-dependencies]
tokio-test = "0.4"
hyper-util = { version = "0.1", features = ["tokio"] }
