[package]
name = "llm-edge-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Security layer for LLM Edge Agent (auth, validation, PII redaction)"
keywords = ["security", "auth", "pii", "validation", "llm"]
categories = ["authentication", "web-programming", "cryptography"]

[dependencies]
# Web Framework
axum.workspace = true
tower.workspace = true

# Async Runtime
tokio.workspace = true
async-trait.workspace = true

# Security
secrecy.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
validator.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Observability
tracing.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities for PII detection
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
